cmake_minimum_required(VERSION 3.17)
project(AdventOfCode2021)

set(CMAKE_CXX_STANDARD 14)

add_executable(Day1 Day1.cpp)
add_executable(Day2 Day2.cpp)
add_executable(Day3 Day3.cpp)
add_executable(Day4 Day4.cpp)
add_executable(Day5 Day5.cpp)
add_executable(Day6 Day6.cpp)
add_executable(Day7 Day7.cpp)
add_executable(Day8 Day8.cpp)
add_executable(Day9 Day9.cpp)
add_executable(Day10 Day10.cpp)
add_executable(Day11 Day11.cpp)
add_executable(Day12 Day12.cpp)
add_executable(Day13 Day13.cpp)
add_executable(Day14 Day14.cpp)
add_executable(Day15 Day15.cpp)
add_executable(Day16 Day16.cpp)
add_executable(Day17 Day17.cpp)
add_executable(Day18 Day18b.cpp)
add_executable(Day19 Day19.cpp)
add_executable(Day20 Day20.cpp)

